fix screenn